Fix white spaces and line breaks in Essay reports

--- a/styles/fill-in.css
+++ b/styles/fill-in.css
@@ -73,4 +73,5 @@
 .h5p-fill-in-container.h5p-long-fill-in .h5p-fill-in-user-response-wrong,
 .h5p-fill-in-container.h5p-long-fill-in .h5p-fill-in-user-response-correct {
   width: 100%;
+  white-space: normal;
 }
